fix authorization from twitter applet

user in authorize() can be empty when it's already set in d->user,
respect that and successfully authorize.

Thanks to phoenix_fbrd for finding this issue and the patch.

REVIEW:105498
BUG:302267

Please reopen the bug report if you still encounter crashes.

Cherry-picked from 28f6d7cee7e81fda9ba396cc6477370a8ed3ada7